crates/gapura-core/tests/snapshots/golden__https-without-tls.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners: []
  ports: {}
  clusters: {}
status:
  - kind: GatewayClass
    name: gapura
    conditions:
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Handled by Gapura
        observedGeneration: 1
    supportedFeatures:
      - Gateway
      - HTTPRoute
      - HTTPRoute303RedirectStatusCode
      - HTTPRoute307RedirectStatusCode
      - HTTPRoute308RedirectStatusCode
      - HTTPRouteRequestMirror
      - PathMatchRegularExpression
      - ReferenceGrant
  - kind: Gateway
    namespace: infra
    name: main
    addresses:
      - 10.0.0.1
    conditions:
      - type: Accepted
        status: "False"
        reason: ListenersNotValid
        message: No listener is valid
        observedGeneration: 1
      - type: Programmed
        status: "False"
        reason: Invalid
        message: No listener is programmed
        observedGeneration: 1
    listeners:
      - name: https
        supportedKinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        attachedRoutes: 0
        conditions:
          - type: Accepted
            status: "True"
            reason: Accepted
            message: Listener is accepted
            observedGeneration: 1
          - type: Programmed
            status: "False"
            reason: Invalid
            message: Listener is not valid
            observedGeneration: 1
          - type: ResolvedRefs
            status: "False"
            reason: InvalidCertificateRef
            message: HTTPS listener requires tls.certificateRefs
            observedGeneration: 1
          - type: Conflicted
            status: "False"
            reason: NoConflicts
            message: No conflicts
            observedGeneration: 1
