crates/gapura-core/tests/snapshots/golden__other-controller-ignored.snap
---
source: crates/gapura-core/tests/golden.rs
expression: t
---
config:
  listeners: []
  ports: {}
  clusters: {}
status: []
